force-app/main/default/objects/Physician_Patient__c/Physician_Patient__c.object-meta.xml
<CustomObject>
    <label>Physician (p)</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Physician Patient NNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physicians (p)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>