force-app/main/default/objects/Physician_Patient__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Physician_Patients1</relationshipName>
    <type>Lookup</type>
</CustomField>