force-app/main/default/objects/Physician_Patient__c/fields/PhysicianId__c.field-meta.xml
<CustomField>
    <fullName>PhysicianId__c</fullName>
    <label>PhysicianId</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Physician_Patients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>