force-app/main/default/objects/Physician_Patient__c/fields/sys_PatientJDE__c.field-meta.xml
<CustomField>
    <fullName>sys_PatientJDE__c</fullName>
    <formula>Patient__r.JDE_External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sys_PatientJDE</label>
    <type>Text</type>
</CustomField>